<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|center_vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.ijoomer.customviews.IjoomerTextView
                android:id="@+id/txtTitle"
                style="?textview_blue_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/resetpassword_step1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/lntStep1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <com.ijoomer.customviews.IjoomerTextView
                        style="?textview_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/step1" />

                    <com.ijoomer.customviews.IjoomerEditText
                        android:id="@+id/edtEmail"
                        style="?edittext_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:singleLine="true"
                        android:hint="@string/email" />

                    <com.ijoomer.customviews.IjoomerTextView
                        style="?textview_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/reset_password" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lntStep2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <com.ijoomer.customviews.IjoomerTextView
                        style="?textview_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/step2" />

                    <com.ijoomer.customviews.IjoomerEditText
                        android:id="@+id/edtUserName"
                        style="?edittext_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:hint="@string/username" />

                    <com.ijoomer.customviews.IjoomerEditText
                        android:id="@+id/edtToken"
                        style="?edittext_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:hint="@string/resetpassword_token" />

                    <com.ijoomer.customviews.IjoomerTextView
                        style="?textview_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/token_mail" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lntStep3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <com.ijoomer.customviews.IjoomerTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/step3"
                        android:textColor="#333333" />

                    <com.ijoomer.customviews.IjoomerEditText
                        android:id="@+id/edtPassword"
                        style="?edittext_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:hint="@string/password" />

                    <com.ijoomer.customviews.IjoomerEditText
                        android:id="@+id/edtRetypePassword"
                        style="?edittext_h2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:hint="@string/resetpassword_retype" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <com.ijoomer.customviews.IjoomerButton
            android:id="@+id/btnCancel"
            style="?button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.ijoomer.customviews.IjoomerButton
            android:id="@+id/btnNext"
            style="?button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>