<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.ijoomer.customviews.IjoomerTextView
                style="?textview_blue_h4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/facebook_existing_member"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.ijoomer.customviews.IjoomerEditText
                        android:id="@+id/edtUserName"
                        style="?edittext_h2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:hint="@string/username"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.ijoomer.customviews.IjoomerEditText
                        android:id="@+id/edtPassword"
                        style="?edittext_h2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:hint="@string/password"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <com.ijoomer.customviews.IjoomerTextView
                style="?textview_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/facebook_signup_details_existing_info" />

            <com.ijoomer.customviews.IjoomerTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/facebook_signup_alert"
                android:textColor="#F71D15" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="5dp" >

        <com.ijoomer.customviews.IjoomerButton
            android:id="@+id/btnBack"
            style="?button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/back" />

        <com.ijoomer.customviews.IjoomerButton
            android:id="@+id/btnLogin"
            style="?button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>