<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/bg_color"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/bg_color"
            android:orientation="vertical" >

            <com.ijoomer.customviews.IjoomerTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?alert_header_textview"
                android:padding="10dp"
                android:text="@string/dialog_title_forget_username"
                android:textStyle="bold" />

            <com.ijoomer.customviews.IjoomerTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/email"
                style="?textview_h2" />

            <com.ijoomer.customviews.IjoomerEditText
                android:id="@+id/edtEmail"
                style="?edittext_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:hint="@string/mail_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <com.ijoomer.customviews.IjoomerButton
                    android:id="@+id/btnCancel"
                    style="?button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <com.ijoomer.customviews.IjoomerButton
                    android:id="@+id/btnSend"
                    style="?button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/send" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>