<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/blue"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/bg_color"
            android:gravity="center"
            android:orientation="vertical" >

            <com.skilltran.customviews.IjoomerTextView
                android:id="@+id/txtTitle"
                style="?alert_header_textview"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableLeft="@android:drawable/ic_dialog_alert"
                android:drawablePadding="3dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_http_access_credentials" />

            <com.skilltran.customviews.IjoomerEditText
                android:id="@+id/edtHttpAccessUsername"
                style="?edittext_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/username"/>

            <com.skilltran.customviews.IjoomerEditText
                android:id="@+id/edtHttpAccessPassword"
                style="?edittext_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:layout_margin="5dp"
                android:hint="@string/password"/>

            <com.skilltran.customviews.IjoomerCheckBox
                android:id="@+id/chbRemeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:layout_margin="5dp"
                android:text="@string/remember"
                android:textColor="@color/blue"
                android:gravity="center_vertical" />


            <com.skilltran.customviews.IjoomerButton
                android:id="@+id/btnLogin"
                style="?button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/login" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>