<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lnrLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:gravity="center" >

        <com.ijoomer.customviews.IjoomerTextView
            android:id="@+id/txtLoginAs"
            style="?textview_h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_as" />

        <com.ijoomer.customviews.IjoomerTextView
            android:id="@+id/txtUserName"
            style="?textview_h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.ijoomer.customviews.IjoomerButton
        android:id="@+id/btnSignIn"
        style="?button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/signin" />

    <com.ijoomer.customviews.IjoomerButton
        android:id="@+id/btnShare"
        style="?button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_googleplus" />

</LinearLayout>